2011-04-13  Zhenyao Mo  <zmo@google.com>

        Reviewed by Kenneth Russell.

        Extension3D needs to provide a way to check if an extension is enabled
        https://bugs.webkit.org/show_bug.cgi?id=58410

        * html/canvas/WebGLRenderingContext.cpp:
        (WebCore::WebGLRenderingContext::setupFlags): Use isEnabled() instead of supports().
        * platform/graphics/Extensions3D.h: Add isEnabled().
        * platform/graphics/chromium/Extensions3DChromium.h: Ditto.
        * platform/graphics/opengl/Extensions3DOpenGL.cpp: Ditto.
        (WebCore::Extensions3DOpenGL::isEnabled):
        * platform/graphics/opengl/Extensions3DOpenGL.h: Ditto.
        * platform/graphics/qt/Extensions3DQt.cpp: Ditto.
        (WebCore::Extensions3DQt::isEnabled):
        * platform/graphics/qt/Extensions3DQt.h: Ditto.

2011-04-13  Oliver Hunt  <oliver@apple.com>

        Reviewed by Gavin Barraclough.

        Make PropertyMapEntry use a WriteBarrier for specificValue
        https://bugs.webkit.org/show_bug.cgi?id=58407

        Pass JSGlobalData reference on to APIs that now need them

        * bindings/js/JSDOMWindowShell.h:
        (WebCore::JSDOMWindowShell::setWindow):
        * bindings/js/JSHTMLDocumentCustom.cpp:
        (WebCore::JSHTMLDocument::all):

2011-04-12  Pavel Podivilov  <podivilov@chromium.org>

        Reviewed by Pavel Feldman.

        Web Inspector: fix source mapping for de-obfuscated scripts.
        https://bugs.webkit.org/show_bug.cgi?id=58231

        * inspector/front-end/ScriptFormatterWorker.js:
        (buildMapping):
        * inspector/front-end/SourceFile.js:
        (WebInspector.SourceMapping):
        (WebInspector.SourceMapping.prototype.sourceLineToScriptLocation):
        (WebInspector.SourceMapping.prototype._sourceLocationToScriptLocation):
        (WebInspector):
        (WebInspector.FormattedSourceMapping):
        (WebInspector.FormattedSourceMapping.prototype.scriptLocationToSourceLine):